tests/ui-tests/tests/cases/inputobject-guess-validation.stderr
error: Could not find a field fieid in the GraphQL InputObject IssueOrder. Did you mean field?
  --> $DIR/inputobject-guess-validation.rs:64:13
   |
64 |         pub fieid: IssueOrderField,
   |             ^^^^^

error: This InputObject is missing these required fields: field
  --> $DIR/inputobject-guess-validation.rs:61:5
   |
61 |     #[cynic(graphql_type = "IssueOrder")]
   |     ^

error[E0277]: the trait bound `&queries::IssueOrder: IntoArgument<Option<_>>` is not satisfied
  --> $DIR/inputobject-guess-validation.rs:29:32
   |
29 |         #[arguments(order_by = &args.pr_order)]
   |                                ^^^^^^^^^^^^^^ the trait `IntoArgument<Option<_>>` is not implemented for `&queries::IssueOrder`
